--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,24 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Vue.js ###
+.DS_Store
+node_modules
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
