--- a/APICode/src/main/resources/application.properties
+++ b/APICode/src/main/resources/application.properties
@@ -15,5 +15,8 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# API settings
+server.servlet.context-path=/api/v1
+
 # Emailer Configuration
 application.email = covid.suisse.203@gmail.com
