Update application.properties & RestClient.http
- Updated paths with /api/v1/

--- a/APICode/src/main/resources/application.properties
+++ b/APICode/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Emailer Configuration
 application.email = covid.suisse.203@gmail.com
+
+# URL Configuration
+server.servlet.context-path=/api/v1
