--- a/APICode/src/main/resources/application.properties
+++ b/APICode/src/main/resources/application.properties
@@ -20,4 +20,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 server.servlet.context-path=/api/v1
 
 # Emailer Configuration
-application.email = covid.suisse.203@gmail.com
+application.email=covid.suisse.203@gmail.com
+
+# API News service: REMEMBER TO CHANGE THE KEY ONCE THIS GOES TO PROD!
+newsapi.uri=https://newsapi.org/v2/everything?q=singapore+AND+covid&domains=straitstimes.com,channelnewsasia.com&sortBy=publishedAt&apiKey=
+newsapi.apikey=75d8aa0461274ad59c62edda279e5312
