Set up service to delete away expired tokens
- Created new file TokenPurgingTask.java
- updated applications.properties

--- a/APICode/src/main/resources/application.properties
+++ b/APICode/src/main/resources/application.properties
@@ -21,3 +21,6 @@ server.servlet.context-path=/api/v1
 
 # Emailer Configuration
 application.email = covid.suisse.203@gmail.com
+
+# Cron Scheduler
+purging.cron.expression = 0 0 7 * * ?
