--- a/NewsMicroservice/package.json
+++ b/NewsMicroservice/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.11"
+    "mongoose": "^6.0.11",
+    "newsapi": "^2.4.1",
+    "node-cron": "^3.0.0"
   }
 }
