--- a/NewsMicroservice/package.json
+++ b/NewsMicroservice/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.11",
+    "morgan": "^1.10.0",
     "newsapi": "^2.4.1",
     "node-cron": "^3.0.0"
   }
