Insert or update articles to DB working

--- a/NewsMicroservice/package.json
+++ b/NewsMicroservice/package.json
@@ -4,7 +4,7 @@
   "description": "A backend news API microservice to show COVID-19 related news",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,5 +19,8 @@
     "morgan": "^1.10.0",
     "newsapi": "^2.4.1",
     "node-cron": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
