--- a/NewsMicroservice/package.json
+++ b/NewsMicroservice/package.json
@@ -21,6 +21,9 @@
     "node-cron": "^3.0.0"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.13"
   }
 }
