--- a/NewsMicroservice/.env
+++ b/NewsMicroservice/.env
@@ -1,4 +1,5 @@
 # Need to change the password during deployment
 MONGO_URI="mongodb+srv://dbUser:BOzvXN6rYurykZ4R@cluster0.q9bnr.mongodb.net/newsdb?retryWrites=true&w=majority"
+MONGO_URI_TEST="mongodb+srv://dbUser:BOzvXN6rYurykZ4R@cluster0.q9bnr.mongodb.net/newsdb-test?retryWrites=true&w=majority"
 PORT=3001
 NEWSAPI_KEY=75d8aa0461274ad59c62edda279e5312
