--- a/NewsMicroservice/package.json
+++ b/NewsMicroservice/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=dev nodemon -r dotenv/config server.js",
-    "test": "mocha"
+    "test": "jest --setupFiles dotenv/config"
   },
   "keywords": [],
   "author": "G2T4",
@@ -23,7 +23,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
-    "mocha": "^9.1.3",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.13"
   }
 }
