--- a/NewsMicroservice/.env
+++ b/NewsMicroservice/.env
@@ -3,3 +3,4 @@ DB="mongodb+srv://dbUser:BOzvXN6rYurykZ4R@cluster0.q9bnr.mongodb.net/newsdb?retr
 DB_TEST="mongodb+srv://dbUser:BOzvXN6rYurykZ4R@cluster0.q9bnr.mongodb.net/newsdb-test?retryWrites=true&w=majority"
 PORT=3001
 NEWSAPI_KEY=75d8aa0461274ad59c62edda279e5312
+MOHRSS="https://www.moh.gov.sg/feeds/news-highlights"
