--- a/NewsMicroservice/package.json
+++ b/NewsMicroservice/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
     "newsapi": "^2.4.1",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "rss-parser": "^3.12.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
