--- a/APICode/pom.xml
+++ b/APICode/pom.xml
@@ -92,6 +92,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.rest-assured</groupId>
+			<artifactId>spring-mock-mvc</artifactId>
+			<scope>test</scope>
+		  </dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
 			<artifactId>json-path</artifactId>
 			<version>4.2.0</version>
 			<scope>test</scope>
