--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: NewsMicroservice
+        working-directory: ./NewsMicroservice
     strategy:
       matrix:
         node-version: [14.x]
