--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+          cache-dependency-path: 'NewsMicroservice/package-lock.json'
       - name: Install dependencies
         run: npm install
       - name: Runs all the best
