--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -2,8 +2,7 @@ name: News CI
 
 on: 
   push:
-    paths:
-      - 'NewsMicroservice/**'
+    branches: [main]
   pull_request:
     types: [opened, reopened]
 
