--- a/APICode/pom.xml
+++ b/APICode/pom.xml
@@ -125,7 +125,7 @@
 			<version>4.5.6</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.awaitility</groupId>
 			<artifactId>awaitility</artifactId>
 			<version>4.0.3</version>
@@ -136,7 +136,7 @@
 			<artifactId>greenmail-junit5</artifactId>
 			<version>1.6.5</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
