--- a/APICode/pom.xml
+++ b/APICode/pom.xml
@@ -149,6 +149,11 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
+				<configuration>
+					<excludes>
+						<exclude>com/app/APICode/G2T4Application.class</exclude>
+					</excludes>
+				 </configuration>
 				<executions>
 					<execution>
 						<goals>
