--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -22,5 +22,5 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
-    - name: Build with Maven
-      run: ./mvnw -B package --file pom.xml
+    - name: Build & Test with Maven
+      run: mvn -B -U verify --file pom.xml
