--- a/APICode/src/main/resources/application.properties
+++ b/APICode/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 # Database Configuration
-server.error.include-stacktrace=never
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://${AZURE_MYSQL_DB_HOST}/cs203proj
+spring.datasource.username=${AZURE_MYSQL_DB_USERNAME}
+spring.datasource.password=${AZURE_MYSQL_DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
 
 # Spring Mailer Configuration
 spring.mail.host=smtp.gmail.com
