--- a/.github/workflows/main_apicode_deployment.yml
+++ b/.github/workflows/main_apicode_deployment.yml
@@ -1,10 +1,8 @@
 name: main APICode deployment
 
 on:
-  push:
-    branches: main
-  pull_request:
-    types: [opened, reopened]
+  release:
+    types: [published]
 
 env:
   AZURE_WEBAPP_NAME: swisshack
