--- a/APICode/src/main/resources/application.properties
+++ b/APICode/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Configuration
-spring.datasource.url=jdbc:mysql://${AZURE_MYSQL_DB_HOST}/cs203proj
+spring.datasource.url=jdbc:mysql://${AZURE_MYSQL_DB_HOST}/cs203proj?useSSL=true
 spring.datasource.username=${AZURE_MYSQL_DB_USERNAME}
 spring.datasource.password=${AZURE_MYSQL_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
