--- a/RestaurantMapper/package.json
+++ b/RestaurantMapper/package.json
@@ -17,6 +17,7 @@
   "author": "G2T4",
   "license": "UNLICENSED",
   "dependencies": {
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
