--- a/.github/workflows/vue_deployment.yml
+++ b/.github/workflows/vue_deployment.yml
@@ -1,3 +1,4 @@
+name: Vue Deployment
 on:
   push:
     branches:
@@ -6,10 +7,6 @@ on:
     types: [opened, reopened]
     branches:
       - main
-      
-defaults:
-  run:
-    working-directory: ./FrontEnd
 
 jobs:
   build_and_deploy:
@@ -25,6 +22,6 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           action: "upload"
-          app_location: '/'
+          app_location: 'FrontEnd'
           output_location: 'dist'
           app_build_command: 'npm run build'
