--- a/APICode/src/test/resources/application-test.properties
+++ b/APICode/src/test/resources/application-test.properties
@@ -7,9 +7,9 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 
-spring.mail.host=127.0.0.1
-spring.mail.port=3025
-spring.mail.username=duke
-spring.mail.password=springboot
-spring.mail.protocol=smtp
-spring.mail.test-connection=true
+# spring.mail.host=127.0.0.1
+# spring.mail.port=3025
+# spring.mail.username=duke
+# spring.mail.password=springboot
+# spring.mail.protocol=smtp
+# spring.mail.test-connection=true
