Added fallback redirect for Vue deployment

--- a/.github/workflows/main_apicode_deployment.yml
+++ b/.github/workflows/main_apicode_deployment.yml
@@ -1,13 +1,8 @@
 name: main APICode deployment
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, reopened]
-    branches:
-      - main
+  release:
+    types: [published]
 
 env:
   AZURE_WEBAPP_NAME: swisshack
