--- a/.github/workflows/vue_deployment.yml
+++ b/.github/workflows/vue_deployment.yml
@@ -1,8 +1,13 @@
 name: Vue Deployment
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, reopened]
+    branches:
+      - main
 
 jobs:
   build_and_deploy:
