Modified Actions to run on its respective folders

--- a/.github/workflows/apiCode_CI.yml
+++ b/.github/workflows/apiCode_CI.yml
@@ -4,8 +4,12 @@ on:
   push:
     branches:
       - "*"
+    paths:
+      - APICode/**
   pull_request:
     types: [opened, reopened]
+    paths:
+      - APICode/**
 
 env:
   AZURE_WEBAPP_NAME: swisshack
