--- a/.github/workflows/apiCode_deployment.yml
+++ b/.github/workflows/apiCode_deployment.yml
@@ -1,4 +1,4 @@
-name: main APICode deployment
+name: APICode deployment
 
 on:
   release:
@@ -15,23 +15,8 @@ defaults:
     working-directory: ./APICode
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: 'ubuntu-latest'
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: maven
-    
-    - name: Build & Test with Maven
-      run: mvn -B -U verify
-
-  deploy:
-    runs-on: 'ubuntu-latest'
-    needs: build
     steps:
       - uses: actions/checkout@v2
       
