--- a/RestaurantMapper/package.json
+++ b/RestaurantMapper/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "geolib": "^3.3.3",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.0"
