--- a/APICode/src/main/resources/application.properties
+++ b/APICode/src/main/resources/application.properties
@@ -1,22 +1,16 @@
 # Database Configuration
-server.error.include-stacktrace=never
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://${AZURE_MYSQL_DB_HOST}/cs203proj?useSSL=true
+spring.datasource.username=${AZURE_MYSQL_DB_USERNAME}
+spring.datasource.password=${AZURE_MYSQL_DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
 
 # Spring Mailer Configuration
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
-spring.mail.username=covid.suisse.203@gmail.com
-spring.mail.password=ilovejava
+spring.mail.username=apikey
+spring.mail.password=${SENDGRID_API_KEY}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
 
 # Spring scheduler thread settings
 spring.task.scheduling.pool.size=5
@@ -25,7 +19,7 @@ spring.task.scheduling.pool.size=5
 server.servlet.context-path=/api/v1
 
 # Emailer Configuration
-application.email=covid.suisse.203@gmail.com
+application.email=swisshack@0xf00dface.com
 
 # Cron Scheduler
 purging.cron.expression = 0 0 7 * * ?
