--- a/RestaurantMapper/package.json
+++ b/RestaurantMapper/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=dev nodemon -r dotenv/config index.js",
     "start-windows": "set NODE_ENV=dev&&node -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "NODE_ENV=prod node -r dotenv/config index.js"
+    "prod": "NODE_ENV=prod node index.js"
   },
   "keywords": [
     "Restaurant",
