Added the resturants to map function

--- a/FrontEnd/.env.production
+++ b/FrontEnd/.env.production
@@ -1,2 +1,3 @@
 VUE_APP_API_ENDPOINT='https://swisshack.azurewebsites.net/api/v1'
 VUE_APP_NEWS_MICROSERVICE_ENDPOINT='https://swisshack-newsapi.azurewebsites.net/api/v1'
+VUE_APP_RESTAURANT_MAPPER_MICROSERVICE_ENDPOINT='https://swisshack-restaurantmapper.azurewebsites.net/api/v1'
