--- a/FrontEnd/.env.development
+++ b/FrontEnd/.env.development
@@ -1,2 +1,3 @@
 VUE_APP_API_ENDPOINT='http://localhost:8080/api/v1/'
 VUE_APP_NEWS_MICROSERVICE_ENDPOINT='http://localhost:3001/api/v1'
+VUE_APP_RESTAURANT_MAPPER_MICROSERVICE_ENDPOINT='http://localhost:3002/api/v1'
