--- a/APICode/pom.xml
+++ b/APICode/pom.xml
@@ -6,6 +6,23 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.4</version>
 		<relativePath /> <!-- lookup parent from repository -->
+		<profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <activatedProperties>dev</activatedProperties>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <activatedProperties>prod</activatedProperties>
+            </properties>
+        </profile>
+    </profiles>
 	</parent>
 	<groupId>com.app</groupId>
 	<artifactId>APICode</artifactId>
@@ -15,6 +32,7 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	
 	<dependencies>
 		<!-- Documentation -->
 		<dependency>
@@ -130,13 +148,13 @@
 			<artifactId>awaitility</artifactId>
 			<version>4.0.3</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>com.icegreen</groupId>
 			<artifactId>greenmail-junit5</artifactId>
 			<version>1.6.5</version>
 			<scope>test</scope>
-		</dependency> -->
+		</dependency>
 	</dependencies>
 
 	<build>
