--- a/APICode/src/main/resources/application.properties
+++ b/APICode/src/main/resources/application.properties
@@ -1,17 +1,3 @@
-# Database Configuration
-spring.datasource.url=jdbc:mysql://${AZURE_MYSQL_DB_HOST}/cs203proj?useSSL=true
-spring.datasource.username=${AZURE_MYSQL_DB_USERNAME}
-spring.datasource.password=${AZURE_MYSQL_DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
-
-# Spring Mailer Configuration
-spring.mail.host=smtp.sendgrid.net
-spring.mail.port=587
-spring.mail.username=apikey
-spring.mail.password=${SENDGRID_API_KEY}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-
 # Spring scheduler thread settings
 spring.task.scheduling.pool.size=5
 
@@ -24,3 +10,6 @@ application.email=swisshack@0xf00dface.com
 # Cron Scheduler
 purging.cron.expression = 0 0 7 * * ?
 notification.cron.ctest = 0 0 * * * *
+
+# Spring Profile
+spring.profiles.active=@activatedProperties@
