--- a/APICode/src/main/resources/application-prod.properties
+++ b/APICode/src/main/resources/application-prod.properties
@@ -13,3 +13,5 @@ spring.mail.username=apikey
 spring.mail.password=${SENDGRID_API_KEY}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
+
+spring.devtools.add-properties=false
