--- a/.github/workflows/apiCode_deployment.yml
+++ b/.github/workflows/apiCode_deployment.yml
@@ -35,7 +35,7 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - run: |
-          mvn spring-boot:build-image -Dspring-boot.build-image.imageName=${{ secrets.REGISTRY_SERVER }}/${{ env.AZURE_WEBAPP_NAME }}:${{ github.sha }}
+          mvn spring-boot:build-image -Pprod -Dspring-boot.build-image.imageName=${{ secrets.REGISTRY_SERVER }}/${{ env.AZURE_WEBAPP_NAME }}:${{ github.sha }}
           docker push ${{ secrets.REGISTRY_SERVER }}/${{ env.AZURE_WEBAPP_NAME }}:${{ github.sha }}
       
       - name: Deploy to Azure Web App for Container
