--- a/APICode/src/main/resources/application-prod.properties
+++ b/APICode/src/main/resources/application-prod.properties
@@ -15,3 +15,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 
 spring.devtools.add-properties=false
+
+springdoc.swagger-ui.enabled = true
