--- a/APICode/src/main/resources/application-dev.properties
+++ b/APICode/src/main/resources/application-dev.properties
@@ -10,7 +10,7 @@ spring.h2.console.enabled=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=covid.suisse.203@gmail.com
-spring.mail.password=ilovejava
+spring.mail.password=IloveJava1
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
