--- a/APICode/src/main/resources/application-dev.properties
+++ b/APICode/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.h2.console.enabled=true
 # Spring Mailer Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=covid.suisse.203@gmail.com
+spring.mail.username=swisshack.203@gmail.com
 spring.mail.password=IloveJava1
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
