--- a/NewsMicroservice/package.json
+++ b/NewsMicroservice/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=dev nodemon -r dotenv/config server.js",
     "start_windows": "set NODE_ENV=dev&&node -r dotenv/config server.js",
     "test": "jest --setupFiles dotenv/config -i --testTimeout=15000 --forceExit",
-    "testprod": "jest --setupFiles dotenv/config -i --testTimeout=15000 --forceExit dotenv_config_path=.env.prod",
+    "testprod": "jest --setupFiles ./dotenv-prodtest-config.js -i --testTimeout=15000 --forceExit",
     "prod": "NODE_ENV=prod node -r dotenv/config server.js dotenv_config_path=.env.prod"
   },
   "jest": {
