--- a/.github/workflows/news_CI.yml
+++ b/.github/workflows/news_CI.yml
@@ -17,6 +17,11 @@ defaults:
 
 env:
   AZURE_WEBAPP_NAME: swisshack-newsapi
+  DB: ${{ secrets.DB }}
+  DB_TEST: ${{ secrets.TEST_DB }}
+  PORT: 3001
+  NEWSAPI_KEY: ${{ secrets.NEWSAPI_KEY }}
+  MOHRSS: https://www.moh.gov.sg/feeds/news-highlights
 
 jobs:
   build:
