--- a/APICode/src/main/resources/application-dev.properties
+++ b/APICode/src/main/resources/application-dev.properties
@@ -9,8 +9,11 @@ spring.h2.console.enabled=true
 # Spring Mailer Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=swisshack.203@gmail.com
-spring.mail.password=IloveJava1
+
+# TODO: Enter your email and password for your email
+spring.mail.username={YOUR_EMAIL_HERE}
+spring.mail.password={YOUR_EMAIL_PASSWORD_HERE}
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
