--- a/APICode/src/test/resources/application-test.properties
+++ b/APICode/src/test/resources/application-test.properties
@@ -8,7 +8,6 @@ spring.datasource.password=password
 
 spring.mail.host=127.0.0.1
 spring.mail.port=3025
-
-# TODO: Enter your email and password for your email
-spring.mail.username={YOUR_EMAIL_HERE}
-spring.mail.password={YOUR_EMAIL_PASSWORD_HERE}
+spring.mail.username=duke
+spring.mail.password=springboot
+spring.mail.protocol=smtp
